
PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4499: mvn-build miss tez classes in pig-h2.jar (daijy)

PIG-4488: Pig on tez mask tez.queue.name (daijy)

PIG-4497: [Pig on Tez] NPE for null scalar (rohini)

PIG-4493: Pig on Tez gives wrong results if Union is followed by Split (rohini)

PIG-4491: Streaming Python Bytearray Bugs (jeremykarn via daijy)

PIG-4487: Pig on Tez gives wrong success message on failure in case of multiple outputs (rohini)

PIG-4483: Pig on Tez output statistics shows storing to same directory twice for union (rohini)

PIG-4480: Pig script failure on Tez with split and order by due to missing sample collection (rohini)

PIG-4484: Ant pull jetty-6.1.26.zip on some platform (daijy)

PIG-4479: Pig script with union within nested splits followed by join failed on Tez (rohini)

PIG-4457: Error is thrown by JobStats.getOutputSize() when storing to a MySql table (rohini)

PIG-4475: Keys in AvroMapWrapper are not proper Pig types (rdsr via daijy)

PIG-4478: TestCSVExcelStorage fails with jdk8 (rohini)

PIG-4474: Increasing intermediate parallelism has issue with default parallelism (rohini)

PIG-4465: Pig streaming ship fails for relative paths on Tez (rohini)

PIG-4461: Use benchmarks for Windows Pig e2e tests (nmaheshwari via daijy)

PIG-4463: AvroMapWrapper still leaks Avro data types and AvroStorageDataConversionUtilities do not handle
 Pig maps (rdsr via daijy)

PIG-4460: TestBuiltIn testValueListOutputSchemaComplexType and testValueSetOutputSchemaComplexType tests
 create bags whose inner schema is not a tuple (erwaman via daijy)
