@@ -58,6 +58,8 @@ PIG-4333: Split BigData tests into multiple groups (rohini)
  
 BUG FIXES
 
+PIG-4498: AvroStorage in Piggbank does not handle bad records and fails (viraj via rohini)
+
 PIG-4499: mvn-build miss tez classes in pig-h2.jar (daijy)
 
 PIG-4488: Pig on tez mask tez.queue.name (daijy)
